kustomize_ext/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple          
    spec:
      containers:
      - name: simple
        image: quay.io/user1/simple-quarkus:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            protocol: TCP
