kustomize_ext/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demoapp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: demoapp
    weight: 100
  wildcardPolicy: None
